# st-bumblebee-aligner

./: .flake8  README.md  app.py  extra-pip.txt  get_state.py  packages.txt  pyproject.toml  requirements-.txt  requirements.txt  run-streamlit-debug.bat  run-streamlit.bat  st-bumblebee-aigner.py  st-bumblebee-aligner-v0.1.1.py  st-bumblebee-aligner.py  st_app.py  st_demo_settings.py  up_files_ex.py
.github/workflows/: build.yml
.streamlit/: config.toml
bee_aligner/: 00-memo-streamlit.txt  __init__.py  bee_aligner.py  bee_corr.py  cos_matrix2.py  detect_lang.py  detect_lang.py-  detect_lang_pg.py  encode.py  fetch_sent_corr.py  gen_row_alignment.py  plist_to_slist.py  split_semicolon.py  text_to_plist.py
bk/: st_app.py-  st_app.py--
data/: cmat.lzma  pset.lzma
tests/: test_bee_aligner.py
