[tool.poetry]
name = "bee_aligner"
version = "0.1.0"
description = ""
authors = ["freemt <yucongo+fmt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.72.0"
polyglot = "^16.7.4"
seaborn = "^0.11.0"
diskcache = "^5.1.0"
logzero = "^1.6.3"
sentence_splitter = "^1.4"
langid = "^1.1.6"
numpy = "1.19.3"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
