[tool.poetry]
name = "bee_aligner"
version = "0.1.0"
description = ""
authors = ["freemt <yucongo+fmt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^0.82.0"
polyglot = "^16.7.4"
seaborn = "^0.11.0"
diskcache = "^5.1.0"
logzero = "^1.6.3"
sentence_splitter = "^1.4"
langid = "^1.1.6"
numpy = "^1.20.2"
httpx = "^0.17.1"
xlsxwriter = "^1.3.7"
tinybee = "^0.1.3"
pendulum = "^2.1.2"
fasttext = "^0.9.2"
fastlid = "^0.1.2"
light-scores = "^0.1.1"
light-aligner = "^0.1.4"
batch-tr = {git = "https://github.com/ffreemt/batch-tr"}
sklearn = "^0.0"
fast-scores = {git = "https://github.com/ffreemt/fast-scores"}
cchardet = "^2.1.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.0"
pipreqs = "^0.4.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
